# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

base_output_path = get_label_info(":js_api", "target_out_dir")
js_api_obj_path = base_output_path + "/api.o"
gen_js_obj("js_api") {
  input = "//base/compileruntime/js_api_module/api/js_api.js"
  output = js_api_obj_path
}

ohos_shared_library("api") {
  include_dirs = [
    "//third_party/icu/icu4c/source/common",
    "//third_party/node/src",
    "//foundation/ace/napi/interfaces/kits",
    "//base/compileruntime/js_api_module/api",
  ]

  sources = [
    "js_uri.cpp",
    "js_url.cpp",
    "native_module_api.cpp",
  ]

  deps = [
    ":js_api",
    "//base/compileruntime/js_api_module/api/:js_api",
    "//foundation/ace/napi/:ace_napi",
    "//foundation/ace/napi/:ace_napi_quickjs",
    "//third_party/icu/icu4c:static_icuuc",
    "//utils/native/base:utils",
  ]

  if (is_standard_system) {
    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  subsystem_name = "ccruntime"
  part_name = "jsapi_api"

  relative_install_dir = "module"
}

group("api_packages") {
  deps = [ ":api" ]
}
